# rp2040-test5

./: CMakeLists.txt  README.md  SUB-LICENSE.md  flash.sh
src/: CMakeLists.txt  main.c
